# Open-Sentencing-UI

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json
.github/workflows/: greetings.yml  main.yml
chart/base/: Chart.yaml  values.yaml
chart/base/templates/: deployment.yaml  serviceaccount.yaml
python/: .dockerignore  Dockerfile  requirements.txt
python/src/: README.md  main.py  model.pkl  pyproject.toml
web/: Dockerfile  angular.json  appid.d.ts  package-lock.json  package.json  proxyConfig.json  tsconfig.json
web/nginx/: nginx.conf
web/src/: index.html  styles.scss  test-carbon-components-angular.module.ts
web/src/app/: App.js  app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  modal-form.service.spec.ts  modal-form.service.ts
web/src/app/components/auth-callback/: auth-callback.component.spec.ts  auth-callback.component.ts
web/src/app/components/cases/: cases.component.html  cases.component.scss  cases.component.spec.ts  cases.component.ts  cases.service.spec.ts  cases.service.ts
web/src/app/components/embrace/: embrace.component.html  embrace.component.scss  embrace.component.spec.ts  (+3 more)
web/src/app/guards/: authenticate-user.guard.spec.ts  authenticate-user.guard.ts
web/src/app/models/: AppIdUserToken.ts  UserToken.ts
web/src/app/services/: appid-authentication.service.ts  authentication.service.ts
web/src/app/utils/: charges.ts
web/src/assets/scss/: carbon-overrides.scss
web/src/environments/: environment.prod.ts  environment.ts
(+30 files in other folders)
